gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fob2.d
version https://git-lfs.github.com/spec/v1
oid sha256:4cf18c2a78424d79c3113c30b6d313d912702f539f5fbab6fe39fca90a7d2f72
size 3512
